# fpe-c

./: .gitignore  CMakeLists.txt  Makefile  RADIX_CORRECTION.md  README.md  fpe.pc.in  package.json
.github/workflows/: ci.yml
docs/: ALGORITHMS.md  API.md  CODE_REVIEW.md  ERROR_HANDLING.md  MIGRATION.md  PERFORMANCE.md  SECURITY.md  SM4.md  STATS.md  THREADING.md
examples/: CMakeLists.txt  Makefile  PERFORMANCE.md  README.md  aes_vs_sm4.c  basic.c  benchmark.c  benchmark_mt.c  compare.c  credit_card.c  custom_alphabet.c  errors.c  ff3-1.c  inplace.c  oneshot.c  sm4.c  threads.c
include/: fpe.h  fpe_version.h
openspec/changes/fpe-c-implementation/: design.md  proposal.md  tasks.md
openspec/changes/fpe-c-implementation/specs/fpe-api/: spec.md
openspec/changes/fpe-c-implementation/specs/fpe-ff1/: spec.md
openspec/changes/fpe-c-implementation/specs/fpe-ff3/: spec.md
openspec/changes/fpe-c-implementation/specs/fpe-ff3-1/: spec.md
openspec/changes/fpe-c-implementation/specs/fpe-sm4/: spec.md
openspec/changes/fpe-c-implementation/specs/fpe-utils/: spec.md
src/: ff1.c  ff1.h  ff3-1.c  ff3-1.h  ff3.c  ff3.h  fpe.c  fpe_internal.h  utils.c  utils.h
tests/: CMakeLists.txt  pthread_barrier_compat.c  pthread_barrier_compat.h  test_abi.c  test_api.c  test_basic.c  test_ff1.c  test_ff1_mt.c  test_ff1_performance.c  test_ff1_vectors.c  test_ff3-1.c  test_ff3-1_mt.c  test_ff3-1_performance.c  test_ff3.c  test_ff3_mt.c  test_ff3_performance.c  test_fuzz.c  test_memory.c  test_oneshot.c  test_oneshot_benchmark.c  test_openssl_version.c  test_property.c  test_sm4.c  test_thread_safety.c  test_utils.c  test_vectors.c  vectors.h
